Completed HTML basics and started on CSS basics

--- a/htmlsandbox_starter/08_block_inline.html
+++ b/htmlsandbox_starter/08_block_inline.html
@@ -7,6 +7,18 @@
   <title>Inline vs Block</title>
 </head>
 <body>
- 
+<p style="border: 2px midnightblue solid;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ducimus, eveniet placeat illum possimus velit eos nesciunt esse quia ipsum nihil maiores omnis <strong>quibusdam nobis aperiam autem </strong>  provident inventore ea.</p>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit quam eum nostrum atque ad repudiandae, incidunt tempora neque corrupti soluta.</p>
+
+<!-- A link here -->
+<a style="border:2px rgb(255, 192, 255) solid" href="#">A link</a>
+<a href="#">A link</a>
+
+<ul>
+  <li>item 1</li>
+  <li>item 2</li>
+</ul>
+
 </body>
 </html>
+
