--- a/htmlsandbox_starter/10_entities.html
+++ b/htmlsandbox_starter/10_entities.html
@@ -7,6 +7,26 @@
   <title>Entities</title>
 </head>
 <body>
-  
+  <!-- Non breaking space -->
+  <p>Hello, my name is Brad                       space here</p>
+  <p>Hello, my name is &nbsp; Brad</p>
+  <!-- Greater than and less than -->
+  <p> 5 &gt; 2</p>
+  <p> 5 &#62; 2</p>
+  <p> 1 &lt; 2</p>
+  <p> 1 &#60; 2</p>
+  <!-- Trademark -->
+  <p>&reg;</p>
+  <!-- Currency -->
+  <p>&cent;</p>
+  <p>&dollar;</p>
+  <p>&euro;</p>
+  <!-- Computer code font -->
+  <code>
+    &lt;?php echo 'Hello' ?&gt;
+  </code>
+  <p>Save the file by pressing <kbd>Ctrl + S</kbd></p>
+
+
 </body>
 </html>
