--- a/csssandbox_starter/03_fonts.html
+++ b/csssandbox_starter/03_fonts.html
@@ -4,12 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> 
   <title>Fonts</title>
   <style>
-   
+    /* Adding an external font */
+    body{
+      font-family: 'Lato', sans-serif;
+      font-size: 18px;
+      line-height: 1.6;
+    }
+   #welcome p span {
+     font-weight: bold;
+   }
+   #about p span{
+     font-style:italic;
+   }
   </style>
 </head>
 <body>
-    
+  <div id=welcome>
+    <h2 id="primary-heading">Welcome</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <span>Quo eveniet perferendis quibusdam ipsa soluta id veritatis explicabo vero, porro</span>
+       corporis quod consectetur commodi doloremque maiores nisi doloribus odit unde reiciendis?</p>
+  </div>
+  <div id="about">
+    <h2 class="secondary-header">About</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <span>Dolore quod </span> ab aut totam dolores, eligendi rerum recusandae in a cumque.</p>
 </body>
 </html>
