--- a/csssandbox_starter/04_colors.html
+++ b/csssandbox_starter/04_colors.html
@@ -6,10 +6,23 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Colors</title>
   <style>
-   
+   h1{
+     /* color name */
+     color:turquoise;
+   }
+   h2{
+     /* RGB */
+     color: rgb(210,120,205);
+   }
+   h3{
+     /* Hex */
+    color:#00f00f;
+   }
   </style>
 </head>
 <body>
-  
+  <h1>Heading 1</h1>
+  <h2>Heading 2</h2>
+  <h3>Heading 3</h3>
 </body>
 </html>
