--- a/csssandbox_starter/05_backgrounds_borders.html
+++ b/csssandbox_starter/05_backgrounds_borders.html
@@ -6,10 +6,68 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Backgrounds & Borders</title>
   <style>
-  
+  #box-1{
+    /* Borders have 3 properties */
+    background-color: blanchedalmond;
+    /* border-width: 3px;
+    border-color: red;
+    border-style: dotted; */
+    /* truncate in 1 line */
+    border: 3px red solid;
+    /* for rounded edges */
+    border-radius: 10px;
+  }
+  #box-2{
+    background:#333;
+    color: #fff;
+    border-top: midnightblue solid 3px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+  #box-3{
+    /* background-image: url('./img/stars.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover; */
+    /* Trucanted into 1 line. Add slash for size */
+    /* Shorthand only for specific properties */
+    background: url('./img/stars.jpg') no-repeat center center/cover;
+    color: #fff;
+    width:600px;
+    height: 300px;
+  }
+
+  #box-4{
+    background: url('./img/leaf.png') no-repeat center bottom;
+    /* Fixes background as you scroll */
+    background-attachment: fixed;
+  }
   </style>
 </head>
 <body>
- 
+ <div id="box-1">
+   <h3>Box One</h3>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi amet nulla dignissimos necessitatibus id, recusandae inventore facere repellat? Possimus fugit non aperiam perferendis id, nisi sequi voluptatibus at commodi est.</p>
+ </div>
+ <br>
+ <div id="box-2">
+   <h3>Box Two</h3>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi amet nulla dignissimos necessitatibus id, recusandae inventore facere repellat? Possimus fugit non aperiam perferendis id, nisi sequi voluptatibus at commodi est.</p>
+ </div>
+ <div id="box-3">
+   <h3>Box Three</h3>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi amet nulla dignissimos necessitatibus id, recusandae inventore facere repellat? Possimus fugit non aperiam perferendis id, nisi sequi voluptatibus at commodi est.</p>
+ </div>
+ <div id="box-4">
+   <h3>Box Four</h3>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi amet nulla dignissimos necessitatibus id, recusandae inventore facere repellat? Possimus fugit non aperiam perferendis id, nisi sequi voluptatibus at commodi est.</p>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi amet nulla dignissimos necessitatibus id, recusandae inventore facere repellat? Possimus fugit non aperiam perferendis id, nisi sequi voluptatibus at commodi est.</p>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi amet nulla dignissimos necessitatibus id, recusandae inventore facere repellat? Possimus fugit non aperiam perferendis id, nisi sequi voluptatibus at commodi est.</p>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi amet nulla dignissimos necessitatibus id, recusandae inventore facere repellat? Possimus fugit non aperiam perferendis id, nisi sequi voluptatibus at commodi est.</p>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi amet nulla dignissimos necessitatibus id, recusandae inventore facere repellat? Possimus fugit non aperiam perferendis id, nisi sequi voluptatibus at commodi est.</p>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi amet nulla dignissimos necessitatibus id, recusandae inventore facere repellat? Possimus fugit non aperiam perferendis id, nisi sequi voluptatibus at commodi est.</p>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi amet nulla dignissimos necessitatibus id, recusandae inventore facere repellat? Possimus fugit non aperiam perferendis id, nisi sequi voluptatibus at commodi est.</p>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi amet nulla dignissimos necessitatibus id, recusandae inventore facere repellat? Possimus fugit non aperiam perferendis id, nisi sequi voluptatibus at commodi est.</p>
+ </div>
 </body>
 </html>
