--- a/csssandbox_starter/08_links_buttons.html
+++ b/csssandbox_starter/08_links_buttons.html
@@ -1,15 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Links & Buttons</title>
-  <style>
-    
-  </style>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Links and Buttons</title>
+    <style>
+      body {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      }
+
+      a {
+        color: #333;
+        text-decoration: none;
+      }
+
+      /* a:hover {
+        color: coral;
+        font-size: 40px;
+        text-decoration: underline;
+      } */
+
+      /* a:visited {
+        color: grey;
+      } */
+
+      /* button styling */
+      .btn {
+        background: #4c5ca0;
+        color: #fff;
+        border: none;
+        font-size: 16px;
+        padding: 10px 10px;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+
+      .btn:hover {
+        color: #f4f4f4;
+        /* background: #446190; */
+        background: coral;
+      }
+    </style>
+  </head>
+
+  <body>
+    <a class="btn" href="#"> My link</a>
+    <br />
+    <br />
+    <button class="btn">My Button</button>
+  </body>
 </html>
