completed 2 more CSS tutorials

--- a/csssandbox_starter/10_inline_block.html
+++ b/csssandbox_starter/10_inline_block.html
@@ -1,15 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Inline & Block Styling</title>
-  <style>
-   
-  </style>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Inline & Block Styling</title>
+    <style>
+      li {
+        display: inline;
+      }
+
+      li a {
+        padding-right: 20px;
+      }
+      img {
+        display: block;
+        margin: auto;
+      }
+      .box {
+        background: #f4f4f4;
+        padding: 20px;
+        display: inline-block;
+        margin-bottom: 15px;
+        width: 32.8%;
+        box-sizing: border-box;
+      }
+      /* Can't use width on inline */
+      /* Box sizing cos padding is added to width so it is spilling over */
+    </style>
+  </head>
+  <body>
+    <!-- By default list items are block level elements -->
+    <ul>
+      <li><a href="#">Technology</a></li>
+      <li><a href="#">Business</a></li>
+      <li><a href="#">Fashion</a></li>
+    </ul>
+    <br />
+    <br />
+    <!-- By default images are inline level elements -->
+    <img src="./img/leaf.png" alt="My image" />
+    <br /><br />
+    <div class="box">
+      <h3>Heading</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+        debitis molestiae voluptate quidem placeat in commodi, laboriosam
+        accusamus necessitatibus enim.
+      </p>
+    </div>
+    <div class="box">
+      <h3>Heading</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+        debitis molestiae voluptate quidem placeat in commodi, laboriosam
+        accusamus necessitatibus enim.
+      </p>
+    </div>
+    <div class="box">
+      <h3>Heading</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+        debitis molestiae voluptate quidem placeat in commodi, laboriosam
+        accusamus necessitatibus enim.
+      </p>
+    </div>
+  </body>
 </html>
