--- a/csssandbox_starter/12_form_styling.html
+++ b/csssandbox_starter/12_form_styling.html
@@ -21,6 +21,7 @@
         /* 
           -Background color is #344a72
         */
+        font-family: "Raleway", Arial, Helvetica, sans-serif;
       }
 
       a {
