--- a/csssandbox_starter/11_position.html
+++ b/csssandbox_starter/11_position.html
@@ -1,15 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>CSS Positioning</title>
-  <style>
-   
-  </style>
-</head>
-<body>
- 
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CSS Positioning</title>
+    <style>
+      body {
+        height: 4000px;
+      }
+      .box {
+        width: 100px;
+        height: 100px;
+      }
+      #box1 {
+        background: red;
+        position: relative;
+        top: 50px;
+        left: 50px;
+        z-index: 1;
+      }
+      /* z index to bring box forward closer to user */
+      .container {
+        width: 500px;
+        height: 500px;
+        background: #333;
+        position: relative;
+      }
+      /* to use position absolute, parent element needs to be position relative */
+      #box2 {
+        background: yellow;
+        position: absolute;
+        top: 100px;
+        left: 100px;
+      }
+      #box3 {
+        background: green;
+        position: absolute;
+        bottom: 100px;
+        right: 100px;
+      }
+      #box4 {
+        background: blue;
+        position: fixed;
+      }
+      #box5 {
+        background: orange;
+        position: sticky;
+        top: 0;
+      }
+      /* Stick top 0 top */
+    </style>
+  </head>
+  <body>
+    <div id="box1" class="box"></div>
+    <div class="container">
+      <div id="box2" class="box"></div>
+      <div id="box3" class="box"></div>
+    </div>
+
+    <div id="box4" class="box"></div>
+    <div id="box5" class="box"></div>
+  </body>
 </html>
